# chess-rs

./: Cargo.toml  DIFFICULTY_LEVELS.md  DISCLAIMER.md  ML_README.md  PR_BODY.md  README.md  TIMING_TEST_RESULTS.md  perft_test.txt  test_depth_limits.sh  test_difficulty.sh  test_engine_movement.py  test_engine_timing.py  test_engine_timing_uci.py  test_randomization.sh  test_selfplay.py  test_selfplay_v2.py  test_vs_gnuchess.py
src/: board.rs  main.rs  perft.rs
src/ml/: device.rs  encoder.rs  evaluator.rs  mod.rs  network.rs
tests/: difficulty.rs  engine_movement.rs  engine_timing.rs  selfplay.rs
tests/common/: mod.rs
